<resources>
    <string name="app_name">InfoCarMadrid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="mis_coches">Mis coches</string>
    <string name="noticias">Noticias</string>
    <string name="comprobar">Comprobar</string>
    <string name="recordatorios">Recordatorios</string>
    <string name="nombre_coche">Modelo Coche</string>
    <string name="modelo_coche">Modelo Coche</string>
    <string name="title_activity_miscoches">Mis coches</string>
    <string name="title_activity_comprobarcoche">Comprobar Coche</string>
    <string name="title_activity_recordatorio">Recordatorios</string>
    <string name="marca_coche">Marca Coche</string>
    <string name="nick_coche">Nombra tu coche</string>
    <string name="matricula_coche">Matricula</string>
    <string name="formato_fecha">formato_fecha</string>
    <string name="formato_hora">formato_hora</string>
    <string name="titulo">title</string>
    <string name="titlulo_pickers">Establezca un alarma para la notificación de cambio</string>
    <string name="distintivo">Distintivo Ambiental</string>
    <string name="dist_cero">Cero</string>
    <string name="dist_sd">Sin Distintivo</string>
    <string name="dist_eco">ECO</string>
    <string name="dist_amarillo">Amarillo</string>
    <string name="dist_verde">Verde</string>
    <string name="cancel_string">Cancelar</string>
    <string name="reset_string">Reset</string>
    <string name="submit_string">Añadir</string>
    <string name="add_coche">Añadir coche</string>
    <string name="home">Inicio</string>
    <string name="title_activity_edit_car">EditCarActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="settings">Ajustes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
