<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_car"
        app:showAsAction="always"
        android:title="@string/mis_coches"
        android:icon="@drawable/ic_car_menu"/>
    <item
        android:id="@+id/nav_news"
        app:showAsAction="always"
        android:title="@string/noticias"
        android:icon="@drawable/ic_news_menu"/>
    <item
        android:id="@+id/nav_check"
        app:showAsAction="always"
        android:title="@string/comprobar"
        android:icon="@drawable/ic_find_state_menu"/>
    <item
        android:id="@+id/action_refresh"
        app:showAsAction="always"
        android:title="@string/recordatorios"
        android:icon="@drawable/ic_recordatorio_menu"/>

    <item android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>
