<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_car"
            android:icon="@drawable/ic_car_menu"
            android:title="@string/mis_coches" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news_menu"
            android:title="@string/noticias" />
        <item
            android:id="@+id/nav_check"
            android:icon="@drawable/ic_find_state_menu"
            android:title="@string/comprobar" />
        <item
            android:id="@+id/nav_alarm"
            android:icon="@drawable/ic_recordatorio_menu"
            android:title="@string/recordatorios" />
    </group>

</menu>
