<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <!-- Nombre -->

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nick_coche"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </TextView>


    <EditText
        android:id="@+id/nameView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/nameLabel"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/nick_coche"
        android:inputType="textShortMessage">

        <requestFocus />
    </EditText>

    <!-- Matricula -->

    <TextView
        android:id="@+id/matriculaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matricula_coche"
        android:layout_below="@+id/nameView"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </TextView>

    <EditText
        android:id="@+id/matriculaView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/matriculaLabel"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/matricula_coche"
        android:inputType="textShortMessage">

    </EditText>


    <!-- Distintivo -->

    <TextView
        android:id="@+id/distintivoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/matriculaView"
        android:layout_marginTop="25dp"
        android:text="@string/distintivo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/distintivoView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/distintivoLabel"
        android:orientation="vertical"
        android:layout_marginTop="12dp"
        android:text="@string/distintivo">

        <RadioButton
            android:id="@+id/dist_Cero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dist_cero" />

        <RadioButton
            android:id="@+id/dist_Eco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/dist_eco" />

        <RadioButton
            android:id="@+id/dist_Sd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dist_sd" />

        <RadioButton
            android:id="@+id/dist_Amarillo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/dist_amarillo" />

        <RadioButton
            android:id="@+id/dist_Verde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dist_verde" />
    </RadioGroup>

    <!-- Botones -->

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="25dp"
        android:text="@string/cancel_string" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_string" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/submit_string" />

</RelativeLayout>