<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/marcacochetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Marca Coche"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="122dp"
        tools:layout_editor_absoluteY="16dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:hint="marca_coche"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="62dp"
        tools:ignore="MissingConstraints">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/marca_coche" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="196dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/TextCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_coche" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/carText"
        android:layout_width="127dp"
        android:layout_height="20dp"
        android:text="@string/modelo_coche"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="159dp" />



</android.support.constraint.ConstraintLayout>